# STL-clone

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  ci.org
src/: CMakeLists.txt  deleter.h  main.cpp  sharedPtr.h  uniquePtr.h
tests/: CMakeLists.txt  sharedPtr.cpp  test1.cpp  test2.cpp  uniquePtr.cpp
tools/: .clang-format  .clang-tidy  clang-format.sh  clang-tidy.sh  run-docker.sh
